Fix cards wrapping

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -31,10 +31,11 @@ body {
 }
 
 .sidebar {
-  min-width: 300px;
+  width: 300px;
   background: royalblue;
   padding: 16px;
   font-size: 24px;
+  flex-shrink: 0;
 }
 
 .container {
@@ -47,8 +48,9 @@ body {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
-  padding: 8px;
+  padding: 16px;
   margin: 16px;
+  width: 300px;
 }
 
 a {
